--- a/docs/_assets/stylesheets/_home.scss
+++ b/docs/_assets/stylesheets/_home.scss
@@ -59,7 +59,7 @@ h2 {
 }
 
 .hero {
-  padding-top: 100px;
+  padding-top: 170px;
   opacity: 1;
 }
 
